# OpenGL_Learning2026

./: CMakeLists.txt  Camera.h  GettingStarted.cpp  GettingStarted.cppm  GettingStarted.h  Lighting.cpp  Lighting.cppm  Shader.cpp  Shader.h  Texture.cpp  Texture.cppm  Texture.h  main.cpp
core/include/glad/: glad.h
glsl/gettingStarted/: containerWithAwesomeFaceTexture1.frag  containerWithAwesomeFaceTextureExchangeTranslateAndRotating.vert  containerWithAwesomeFaceTextureLookReverse.frag  containerWithAwesomeFaceTextureRotating.frag  containerWithAwesomeFaceTextureUniformMix3rdPara.frag  moreCubes.frag  moreCubes.vert  tryMouse.frag  vertPosToFrag.frag  vertPosToFrag.vert  xOffset.vert
glsl/lighting/: 2.1.basic_lighting.frag  2.2.basic_lighting.frag  2.2.basic_lighting.vert  2.3.basic_lighting.frag  2.4.basic_lighting.frag  2.4.basic_lighting.vert  3.1.materials.frag  3.2.light_cube.frag  4.1.lighting_maps.frag  4.2.1.lighting_maps.frag  4.3.lighting_maps.frag  5.1.light_casters.frag  5.2.light_casters.frag
